--- a/demo1.vcxproj.filters
+++ b/demo1.vcxproj.filters
@@ -60,6 +60,15 @@
     <ClCompile Include="demo15.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="demo20.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="demo21.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="demo22.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
